<resources>
    <string name="abbr_everyday">Everyday</string>
    <string name="abbr_friday">Fri</string>
    <string name="abbr_monday">Mon</string>
    <string name="abbr_monday_to_saturday">Mon to Sat</string>
    <string name="abbr_no_friday">Mon, Tue, Wed, Thu, Sat, Sun</string>
    <string name="abbr_no_saturday">Mon, Tue, Wed, Thu, Fri, Sun</string>
    <string name="abbr_no_thursday">Mon, Tue, Wed, Fri, Sat, Sun</string>
    <string name="abbr_no_tuseday">Mon, Wed, Thu, Fri, Sat, Sun</string>
    <string name="abbr_no_wednesday">Mon, Tue, Thu, Fri, Sat, Sun</string>
    <string name="abbr_saturday">Sat</string>
    <string name="abbr_thursday">Thu</string>
    <string name="abbr_tuseday">Tue</string>
    <string name="abbr_tuseday_to_weekday">Tue to Sun</string>
    <string name="abbr_wednesday">Wed</string>
    <string name="abbr_weekday">Sun</string>
    <string name="add">Confirm to add</string>
    <string name="add_city">Add city</string>
    <string name="add_clock">Add new alarm</string>
    <string name="add_clock_back">Add new alarm</string>
    <string name="add_to_notes">Add label to Custom</string>
    <string name="added">" (Added)"</string>
    <string name="alarm_clock">Alarm</string>
    <string name="alarm_latter">Remind after %s mins</string>
    <string name="alarm_latter_d">Remind after %1$s days %2$s hrs %3$s mins</string>
    <string name="alarm_latter_h">Remind after %1$s hrs %2$s mins</string>
    <string name="alarm_latter_m">Remind after %1$s mins</string>
    <string name="am">AM</string>
    <string name="app_name">最美闹钟</string>
    <string name="back">Back</string>
    <string name="china_time">Current Time</string>
    <string name="city_list">City list</string>
    <string name="clock_closed">Disabled</string>
    <string name="clock_is_ring">The alarm rang</string>
    <string name="clock_list">Alarm list</string>
    <string name="clock_opened">Enabled</string>
    <string name="close">Close</string>
    <string name="count">Lap</string>
    <string name="current_city">Current City</string>
    <string name="current_clock">Current Alarm</string>
    <string name="custom">Set label</string>
    <string name="defult">Default ring</string>
    <string name="edit_clock_back">Edit Alarm</string>
    <string name="enhance_warm">Crescendo</string>
    <string name="exit_app">Press again to exit</string>
    <string name="faster_to_our">%s hr ahead</string>
    <string name="faster_to_our_s">%s hrs ahead</string>
    <string name="feed_back">Feedback</string>
    <string name="file_not_exists">"This file can't be used because it hadn't exist in local"</string>
    <string name="friday">Fri</string>
    <string name="gift_box">Lucky</string>
    <string name="i_know">I know</string>
    <string name="indicate_txt_1">Click number or slide</string>
    <string name="indicate_txt_2">circle to set alarm time</string>
    <string name="indicate_txt_timepiece">to set timer</string>
    <string name="label_h">H</string>
    <string name="label_m">M</string>
    <string name="label_min">Mins</string>
    <string name="label_second">S</string>
    <string name="last_version">Latest version</string>
    <string name="launch">Start</string>
    <string name="monday">Mon</string>
    <string name="net_work_error">Network error</string>
    <string name="new_clock">Alarm</string>
    <string name="no_clock">No Alarm Clock</string>
    <string name="no_name">No name</string>
    <string name="notes">Custom</string>
    <string name="notes_mask">Mask</string>
    <string name="notes_run">Run</string>
    <string name="notes_snooze">Snooze</string>
    <string name="notes_soup">Soup</string>
    <string name="only_one_time">Remind once</string>
    <string name="pause">Pause</string>
    <string name="period_set">Repeat</string>
    <string name="pm">PM</string>
    <string name="rate_us">Rate Us</string>
    <string name="recommand">Recommend</string>
    <string name="remind_later">Snooze</string>
    <string name="reset">Reset</string>
    <string name="restart">Start</string>
    <string name="ring_custom">Custom</string>
    <string name="ring_loading">loading…</string>
    <string name="ring_set">Ringtone</string>
    <string name="ring_system">System</string>
    <string name="saturday">Sat</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="seconds_counter">Stopwatch</string>
    <string name="sleep_set">Snooze</string>
    <string name="slowish_to_our">%s hr behind</string>
    <string name="slowish_to_our_s">%s hrs behind</string>
    <string name="stop">Stop</string>
    <string name="text_count_up_to_limit">The max</string>
    <string name="thursday">Thu</string>
    <string name="time_interval">Snooze</string>
    <string name="time_set">Set time</string>
    <string name="timepiece">Timer</string>
    <string name="timepiece_defult_time_up">Timer Done</string>
    <string name="timepiece_time_up">Timer Done</string>
    <string name="times_warm">Reminder</string>
    <string name="today">Today</string>
    <string name="together">Same</string>
    <string name="tomorrow">Yesterday</string>
    <string name="toolbox">Toolbox</string>
    <string name="tuesday">Tue</string>
    <string name="unit_ci">times</string>
    <string name="unit_hour">Hour</string>
    <string name="unit_min">mins</string>
    <string name="updata_version">Update</string>
    <string name="v">v</string>
    <string name="version_code">Version</string>
    <string name="vibration_warm">Vibrate</string>
    <string name="volume_set">Volume</string>
    <string name="volume_size">Vol</string>
    <string name="wednesday">Wed</string>
    <string name="weekday">Sun</string>
    <string name="world_time">World Clock</string>
    <string name="yesterday">Tomorrow</string>
    <string name="abbr_sign">,</string>
    <string name="allow_start_slef">"Enable iDO Alarm Clock autostart.
Avoid the app is cleared wrongly by system, result in alarm ringing improperly"</string>
    <string name="app_name_dd">闹钟</string>
    <string name="cancle_btn_txt">Cancel</string>
    <string name="clear_soft_allow_indicate">Check autostart management of the third-party apps like clean-up software and allow iDO Alarm Clock to autostart.</string>
    <string name="clock_indicate_txt">Slide circle or click number to set alarm time</string>
    <string name="clock_name_title">Title</string>
    <string name="close_later_tip_content">"This alarm has been setted to remind later. Next ring at %1$sh%2$sm.
If you want to edit, you need to finish the service of reminding later."</string>
    <string name="close_remind_later">Yes, finish it</string>
    <string name="close_remind_target_time">Repetitive alarm. Remind again at %2$sh %3$sm of %1$s</string>
    <string name="continue_remind">No, keep on</string>
    <string name="delet_city">Delete city</string>
    <string name="delete_clock">Delete</string>
    <string name="dialog_window">The first step: allow pop-up window display. because the restriction of Android system, reminder pages display properly only after that setting</string>
    <string name="do_not_to_set">I know</string>
    <string name="find">Find</string>
    <string name="finish_btn_txt">Finish</string>
    <string name="for_stream">Struggle for your dream and persist. The next moment is your victory!</string>
    <string name="get_up_clock">Wake up alarm</string>
    <string name="goto_set">Go to set</string>
    <string name="hellow_clock">Hello</string>
    <string name="honey_show">Tips</string>
    <string name="honey_title">If alarms do not ring for Android system restriction, do as follows to solve:</string>
    <string name="honey_to_user_help">Get more helps at side bar＞＞</string>
    <string name="huawei_float_window_tip_txt">"The first step: allow iDO Alarm Clock to display dropzone.
Reminder pages display properly only after that setting"</string>
    <string name="huawei_go_to_set">Huawei users go to set</string>
    <string name="huawei_start_selt_tip_txt">"The second step: allow iDO Alarm Clock to run automatically.
Avoid the app is cleared wrongly by system, result in alarm ringing improperly."</string>
    <string name="indicate_choose_week_txt">Click week to set alarm repeat cycle</string>
    <string name="kpskip">Skip</string>
    <string name="later_remind_target_time">Remind later at %1$sh %2$sm</string>
    <string name="latter">No,thanks</string>
    <string name="latter_btn_txt">Repeat after %s mins</string>
    <string name="m_ui5_allow_start_slef">"The second step: enable Trust this app and Auto-start.
Avoid the app is cleared wrongly by system, result in alarm ringing improperly"</string>
    <string name="m_ui5_float_window_tip_txt">"The first step: enable floating window.
Reminder pages display properly only after that setting"</string>
    <string name="m_ui6_allow_start_slef">"The second step: enable iDO Alarm Clock autostart.
Avoid the app is cleared wrongly by system, result in alarm ringing improperly"</string>
    <string name="m_ui6_float_window_tip_txt">"The first step: allow [Display pop-up window].
Reminder pages display properly only after that setting"</string>
    <string name="maxim_name">--Darwin</string>
    <string name="maxim_txt_1">The way to accomplish the task</string>
    <string name="maxim_txt_2">is to value every minute</string>
    <string name="mui_go_to_set">Xiaomi users go to set</string>
    <string name="notification_remind_latter_txt">Remind later</string>
    <string name="other_app">Other APP</string>
    <string name="remind_add_to_allow">"4.iDO Alarm Clock must be added into third-party clean-up software's white lists"</string>
    <string name="remind_at_time">Alarm will ring at %s</string>
    <string name="remind_do_not_close">3. No power off. Application can not autostart after power off</string>
    <string name="remind_do_not_earphone">2.Not use headphones, or sound can not be heard</string>
    <string name="remind_do_not_sd">1.iDO Alarm Clock must be installed in mobile memory</string>
    <string name="remind_huawei">5.Finish particular settings for Huawei users(simple two steps)</string>
    <string name="remind_miui">5.Finish particular settings for Xiaomi users(simple one steps)</string>
    <string name="sure_add">Confirm to add</string>
    <string name="tip_title">Tips</string>
    <string name="to"> to </string>
    <string name="toast_set_time_timepiece">Please set timer time first</string>
    <string name="up_to_close">Slide up to close</string>
    <string name="user_help_txt">Help</string>
    <string name="vibration">vibrate</string>
    <string name="agree_handle">Yes, I want</string>
    <string name="clock_good_gay">Good partner of alarm</string>
    <string name="empty_song">No musics</string>
    <string name="flash_lock_advantage">Close alarm do not need unlock screen. One click to launch iDO Alarm Clock on lockscreen</string>
    <string name="lockscreen_name">iDO Lockscreen</string>
    <string name="net_error_retry">Network error. Try again later.</string>
    <string name="privacy">Privacy policy</string>
    <string name="privacy_back">Back</string>
    <string name="refuse_handle">No, thanks</string>
    <string name="right_to_close">Slide right to close</string>
    <string name="string_close_alarm_watch_news">close clock,watch news</string>
    <string name="string_extension">Extension</string>
    <string name="string_found_time">Found time</string>
    <string name="subjust_clock">Themes</string>
    <string name="them_tasteful">Elegant</string>
    <string name="them_warm">Warm</string>
    <string name="time_out_clock">You have missed this alarm</string>
    <string name="action_settings">Settings</string>
    <string name="add_tag">添加标签</string>
    <string name="add_tag_error_black_list">该应用已经在黑名单中,请联系售后支持!</string>
    <string name="add_tag_error_count">接口调用失败, tag数量过大, 最大不能超过200个</string>
</resources>