<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_ry"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff455a64">

    <www.theboy.wang.clock.view.FilterView
        android:id="@+id/filter_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ff455a64"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:id="@+id/clock_indicate"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@id/clock_indicate_img"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/clock_press" />

                <TextView
                    android:id="@id/clock_indicate_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center_horizontal"
                    android:text="@string/alarm_clock"
                    android:textColor="#ffffffff"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@id/time_indicate"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@id/time_indicate_img"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/time_normal" />

                <TextView
                    android:id="@id/stopwatch_indicate_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center_horizontal"
                    android:text="@string/world_time"
                    android:textColor="#ffffffff"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@id/stopwatch_indicate"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@id/stopwatch_indicate_img"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/stopwatch_press" />

                <TextView
                    android:id="@id/stopwatch_indicate_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center_horizontal"
                    android:text="@string/seconds_counter"
                    android:textColor="#ffffffff"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@id/timepiece_indicate"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@id/timepiece_indicate_img"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/timer_press" />

                <TextView
                    android:id="@id/timepiece_indicate_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center_horizontal"
                    android:text="@string/timepiece"
                    android:textColor="#ffffffff"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>


    </www.theboy.wang.clock.view.FilterView>

    <view
        android:id="@id/title_filter"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/layer_color"
        android:visibility="gone" />

    <ImageView
        android:id="@id/blur_main_img"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <View
        android:id="@id/main_filter"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</RelativeLayout>